--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "mewesk/twig-spreadsheet-bundle",
-    "type": "symfony-bundle",
-    "description": "This Symfony bundle integrates PhpSpreadsheet into Symfony using Twig.",
+    "name": "sgad/twig-spreadsheet",
+    "type": "library",
+    "description": "This library integrates PhpSpreadsheet using Twig.",
     "keywords": ["excel","phpexcel","spreadsheet","phpspreadsheet","twig","symfony"],
     "homepage": "https://github.com/MewesK/TwigSpreadsheetBundle",
     "license": "MIT",
@@ -16,14 +16,14 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "symfony/framework-bundle": "~3.2|~4.0",
+        "php": "^7.2",
+        "symfony/filesystem": "~3.4 | ~4.1",
+        "symfony/twig-bridge": "~3.4 | ~4.1",
         "twig/twig": "~2.0",
-        "phpoffice/phpspreadsheet": "~1.3.1"
+        "phpoffice/phpspreadsheet": "~1.5"
     },
     "require-dev": {
         "symfony/symfony": "~3.2|~4.0",
-        "sensio/framework-extra-bundle": "~3.0|~4.0",
         "symfony/phpunit-bridge": "~4.0",
         "phpunit/phpunit": "^6.5",
         "mpdf/mpdf": "~7.0"
